[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://sprites/player.png" type="Texture" id=2]
[ext_resource path="res://scenes/hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://sounds/player_grounded.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/player_jump.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 2 )

[node name="player" type="KinematicBody2D"]
collision_layer = 2147483650
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -4 )

[node name="squash_tween" type="Tween" parent="."]

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="hitbox" parent="." instance=ExtResource( 3 )]

[node name="collision" parent="hitbox" index="0"]
shape = SubResource( 2 )

[node name="power_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="grounded_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[editable path="hitbox"]
